--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,10 @@ footer  h2 {
     text-align: center;
 }
 
+.text-white {
+    color: white;
+}
+
 .flex{
     display: flex;
 }
@@ -82,6 +86,10 @@ footer  h2 {
 
 .bg-dark {
     background: #4f5d8c;
+}
+
+.bg-black {
+    background: black;
 }
 
 .flex-justify-align-center {
