--- a/css/style.css
+++ b/css/style.css
@@ -24,10 +24,9 @@ ul {
 
 button {
     background: #fff;
-    border: 1rem solid white;
+    border: solid white;
     color: black;
-    font-family: "Roboto", self-serif;
-    padding: 0 1rem 0 1rem;
+    font-family: "Roboto", sans-serif;
     border-radius: 25px;
     display: flex;
     align-items: center;
@@ -47,7 +46,7 @@ footer {
 }
 
 hr {
-    border: 1px solid #4f5d8c;
+    border: solid #4f5d8c;
 }
 
 footer  h2 {
@@ -90,17 +89,26 @@ footer  h2 {
 
 .bg-black {
     background: black;
-    border: 1rem solid black;
+    border: solid black;
 }
 
 .bg-7289da {
     background: #7289da;
-    border: 1rem solid #7289da;
+    border: solid #7289da;
 }
 
 .flex-justify-align-center {
     justify-content: center;
     align-items: center;
+}
+
+.size-button-footer {
+    border-top-width: 0rem;
+    border-bottom-width: 0.3rem;
+    padding-left: 0rem;
+    padding-right: 0rem;
+    border-right-width: 1.5rem;
+    border-left-width: 1.5rem;
 }
 
 .flex-column {
