--- a/css/style.css
+++ b/css/style.css
@@ -41,13 +41,8 @@ main {
     color: black;
 }
 
-.bg-star {
-    background-image: url("../img/stars.svg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: local;
-    padding: 1rem 0rem 1.5rem 0rem;
-    margin: 0 22rem;
+main h3 {
+    font-size: 1.4rem;
 }
 
 footer {
@@ -138,6 +133,15 @@ footer  h2 {
     align-content: flex-start;
     justify-content: center;
     flex-direction: column;
+}
+
+.bg-star {
+    background-image: url("../img/stars.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: local;
+    height: 39px;
+    margin: 0 36rem;
 }
 
 /* impostazioni id */
