--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@
 /* impostazioni generali */
 
 body {
+    max-width: 1980px;
+    min-width: 1980px;
     font-family: "Roboto", sans-serif;
     color: white;
     background-color: darkgray;
@@ -43,6 +45,7 @@ main {
 
 main h3 {
     font-size: 1.4rem;
+    margin-bottom: 1rem;
 }
 
 footer {
